--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ua.epam.training</groupId>
-    <artifactId>PracriceOne</artifactId>
+    <artifactId>PracticeOne</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
